# faber-runtime

./: .gitignore  Cargo.toml  README.md
docs/factory/: autograd-substrate-inventory.md
hosts/llvm/: Cargo.toml
hosts/llvm/src/: array.rs  array_numeric.rs  collection_map.rs  convert.rs  format.rs  instans.rs  intervallum.rs  lib.rs  lib_test.rs  octeti.rs  option.rs  regex_rt.rs  solum.rs  sparsa.rs  tensor.rs  text.rs  valor_aggregate.rs  valor_genus.rs
hosts/native/: Cargo.toml
hosts/native/src/: lib.rs
src/: arena.rs  arena_test.rs  ascii.rs  autograd.rs  autograd_reference_test.rs  display.rs  display_test.rs  frame.rs  frame_live_test.rs  frame_private_test.rs  frame_test.rs  host_abi.rs  host_abi_test.rs  http.rs  instans.rs  instans_test.rs  intervallum.rs  intervallum_test.rs  json.rs  json_test.rs  lib.rs  llvm_abi.rs  llvm_abi_test.rs  packed_numeric.rs  packed_numeric_test.rs  regex.rs  sparsa.rs  sparsa_test.rs  tensor.rs  tensor_test.rs  textus.rs  textus_test.rs  valor.rs  valor_aggregate_test.rs  valor_from_valor_test.rs
tests/: valor_test.rs
