[package]
name = "faber-runtime"
version = "0.1.0"
edition = "2021"
description = "Faber language runtime types for generated Rust (crate name: faber)"
license = "MIT"
readme = "README.md"

[workspace]
members = ["hosts/llvm", "hosts/native"]

[features]
test-support = []

[lib]
name = "faber"
path = "src/lib.rs"
