[package]
name = "faber-host-native"
version = "0.1.0"
edition = "2021"
description = "Native host dispatch for Faber generated Rust applications"
license = "MIT"

[dependencies]
faber = { package = "faber-runtime", path = "../.." }

[dev-dependencies]
faber = { package = "faber-runtime", path = "../..", features = ["test-support"] }
